--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js">
+<html>
   <head>
     <meta charset="utf-8">
     <title></title>
@@ -8,15 +8,15 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="bower_components/bootstrap//dist/css/bootstrap.css"/>
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
   <body ng-app="simonApp">
-    <!--[if lt IE 7]>
+    <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
@@ -33,16 +33,16 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">Simon</a>
+            <a class="navbar-brand" href="#/">simon</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/simon">Simon</a></li>
+              <li><a ng-href="#/about">Nosotros</a></li>
               <li><a ng-href="#/">Contact</a></li>
+              <li><a ng-href="#/simon">Simon</a></li>
             </ul>
           </div>
         </div>
@@ -65,7 +65,7 @@
        !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
        (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
        r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
-       }(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+       }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
@@ -91,21 +91,5 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/simon.js"></script>
         <!-- endbuild -->
-  <!--     <script>
-    $(document).ready(function(){
-    $("#verde").click(function(){
-      $("#titulo").text("verd");
-    })
-    $("#azul").click(function(){
-      $("#titulo").text("blau");
-    })
-    $("#amarillo").click(function(){
-      $("#titulo").text("groc");
-    })
-    $("#rojo").click(function(){
-      $("#titulo").text("roig");
-    })
-
-  })</script>-->
 </body>
 </html>
